@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,6 +25,9 @@ package org.openjdk.bench.javax.crypto.full;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
+import org.openjdk.jmh.infra.Blackhole;
+import java.security.GeneralSecurityException;
+import org.openjdk.jmh.annotations.Fork;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -36,9 +39,10 @@ import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidParameterSpecException;
 
+@Fork(jvmArgsAppend = {"-Xms20g", "-Xmx20g", "-XX:+UseZGC"})
 public class AESBench extends CryptoBase {
 
-    public static final int SET_SIZE = 128;
+    public static final int SET_SIZE = 8;
 
     @Param({"AES/ECB/NoPadding", "AES/ECB/PKCS5Padding", "AES/CBC/NoPadding", "AES/CBC/PKCS5Padding"})
     private String algorithm;
@@ -53,6 +57,7 @@ public class AESBench extends CryptoBase {
     byte[][] encryptedData;
     private Cipher encryptCipher;
     private Cipher decryptCipher;
+    private byte[] outBuffer;
     int index = 0;
 
     @Setup
@@ -66,6 +71,7 @@ public class AESBench extends CryptoBase {
         decryptCipher.init(Cipher.DECRYPT_MODE, ks, encryptCipher.getParameters());
         data = fillRandom(new byte[SET_SIZE][dataSize]);
         encryptedData = fillEncrypted(data, encryptCipher);
+        outBuffer = new byte[dataSize + 128]; // extra space for tag, etc
     }
 
     @Benchmark
@@ -76,10 +82,24 @@ public class AESBench extends CryptoBase {
     }
 
     @Benchmark
+    public void encrypt2(Blackhole bh) throws GeneralSecurityException {
+        byte[] d = data[index];
+        index = (index +1) % SET_SIZE;
+        bh.consume(encryptCipher.doFinal(d, 0, d.length, outBuffer));
+    }
+
+    @Benchmark
     public byte[] decrypt() throws BadPaddingException, IllegalBlockSizeException {
         byte[] e = encryptedData[index];
         index = (index +1) % SET_SIZE;
         return decryptCipher.doFinal(e);
+    }
+
+    @Benchmark
+    public void decrypt2(Blackhole bh) throws GeneralSecurityException {
+        byte[] e = encryptedData[index];
+        index = (index +1) % SET_SIZE;
+        bh.consume(decryptCipher.doFinal(e, 0, e.length, outBuffer));
     }
 
 }
